mdsvex setup plugins and styles

--- a/src/app.html
+++ b/src/app.html
@@ -3,10 +3,12 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link href="%sveltekit.assets%/themes/prism-vscode.css" rel="stylesheet" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
+		<title>Natta Santa</title>
 	</head>
-	<body data-theme="rocket">
+	<body data-theme="rocket" data-sveltekit-preload-data="hover">
 		<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
 	</body>
 </html>
