add meta=description tag

--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link href="%sveltekit.assets%/themes/prism-vscode.css" rel="stylesheet" />
 		<meta name="viewport" content="width=device-width" />
+		<meta name="description" content="Natta Santa - Developer Blog, Japanese Culture, Travel, Lifestyle">
 		%sveltekit.head%
 		<title>Natta Santa</title>
 	</head>
