--- a/src/app.html
+++ b/src/app.html
@@ -1,18 +1,17 @@
 <!doctype html>
-<html lang="en" class="dark">
+<html lang="en" data-theme="rocket">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<link href="%sveltekit.assets%/themes/prism-vscode.css" rel="stylesheet" />
-		<meta name="viewport" content="width=device-width" />
 		<meta
 			name="description"
 			content="Natta Santa - Developer Blog, Japanese Culture, Travel, Lifestyle"
 		/>
+
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
-		<title>Natta Santa</title>
 	</head>
-	<body data-theme="rocket" data-sveltekit-preload-data="hover">
-		<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
+	<body data-sveltekit-preload-data="hover">
+		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
